# afriso

./: .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: africa_countries.py  build_data.py  seed_data.py
src/afriso/: __init__.py  _data.py  _schema.py  cli.py  core.py  models.py
src/afriso/data/: countries.csv  countries.json  languages.csv  languages.json  meta.json
tests/: test_afriso.py  test_cli.py  test_data_integrity.py
