[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afriso"
version = "1.0.0"
description = "Map African language names to ISO 639-3 codes, countries, families, and alternative names."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mich-Seth Owusu", email = "michseth@ghananlp.org" }]
keywords = [
    "african-languages", "iso-639-3", "iso639", "nlp", "linguistics",
    "language-codes", "glottolog", "language-family", "africa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = ["pytest>=7", "pandas>=1.3"]

[project.scripts]
afriso = "afriso.cli:main"

[project.urls]
Homepage = "https://github.com/michsethowusu/afriso"
Repository = "https://github.com/michsethowusu/afriso"
Issues = "https://github.com/michsethowusu/afriso/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/afriso"]

[tool.hatch.build.targets.sdist]
include = ["src/afriso", "scripts", "tests", "README.md", "LICENSE"]
